force-app/main/default/objects/Demand_Raised__c/fields/Amount_Demanded__c.field-meta.xml
<CustomField>
    <fullName>Amount_Demanded__c</fullName>
    <label>Amount Demanded</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>