force-app/main/default/objects/Demand_Raised__c/fields/Current_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Current_Milestone__c</fullName>
    <label>Current Milestone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>