force-app/main/default/objects/Demand_Raised__c/fields/Grand_Total_In_Words__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total_In_Words__c</fullName>
    <label>Grand Total In Words</label>
    <length>255</length>
    <type>Text</type>
</CustomField>