force-app/main/default/objects/Demand_Raised__c/fields/Intrest_Amount__c.field-meta.xml
<CustomField>
    <fullName>Intrest_Amount__c</fullName>
    <label>Interest Amount Pending</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>