force-app/main/default/objects/Demand_Raised__c/fields/Milestone_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Completed_Date__c</fullName>
    <label>Milestone Completed Date</label>
    <type>Date</type>
</CustomField>