force-app/main/default/objects/Demand_Raised__c/fields/Milestone_Number__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Number__c</fullName>
    <label>Milestone Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>