force-app/main/default/objects/Demand_Raised__c/fields/Payment_schedule__c.field-meta.xml
<CustomField>
    <fullName>Payment_schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Payment schedule</label>
    <referenceTo>Payment_schedule__c</referenceTo>
    <relationshipLabel>Demand Raised</relationshipLabel>
    <relationshipName>Demand_Raised</relationshipName>
    <type>Lookup</type>
</CustomField>