force-app/main/default/objects/Demand_Raised__c/fields/Total_Paid_Till__c.field-meta.xml
<CustomField>
    <fullName>Total_Paid_Till__c</fullName>
    <label>Total Amount Paid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>